# Synema

./: AUTHORS  CMakeLists.txt  CRASHES  Doxyfile  README  README.md  THANKS  TODO  quick-build.sh  quick-run.sh
data/: fr.ensi_bourges.synema.log_player.service.in  frame-signals.gob  frame.ui  log-player-demo.xml  machine.conf  synema.conf  window.ui
data/icons/: copyright
machines/10.0.2.18/logs/snort/: alert
machines/10.0.2.18/reports/osiris/: file_hour.txt
machines/10.0.2.32/logs/osiris/: 1
machines/10.0.2.32/logs/snort/: alert
machines/10.0.2.32/reports/correlation/: report
machines/10.0.2.32/reports/osiris/: file_class.txt  file_location.txt
machines/10.0.2.32/reports/snort/: rapport_a_2hours  rapport_a_XIV
machines/126.214.189.165/data/: recap_ip.txt
machines/126.214.189.165/logs/osiris/: 1  12  15  17  18  2  21  22  23  24  27  29  3  5  6  7  8
machines/126.214.189.165/logs/p0f/: p0f_file.txt
machines/126.214.189.165/reports/bash_history/: report.txt  report_files_edition.txt  report_files_manipulation.txt  report_local_rebound.txt  report_machine_inspection.txt  report_program_execution.txt  report_source_code_compilation.txt
machines/126.214.189.165/reports/mod_security/: graph1_6_months.txt
machines/126.214.189.165/reports/osiris/: list_module_medium.txt  module_sensitivity.txt
machines/126.214.189.165/reports/p0f/: 2hoursOSlinux.txt  2hourslink.txt  2hoursnat.txt  2hoursos.txt  2monthsOSwindows.txt  2monthsfw.txt  2monthsos.txt  2monthsup.txt  2weeksnat.txt  NAT.tmp  kernel_ver.tmp  log_pur  os_gen.tmp  up.tmp
machines/126.214.189.165/reports/snort/: rapport_a_1day  rapport_a_live
machines/126.214.189.165/reports/syslog_ssh/: ip_report_hour
machines/126.73.181.215/logs/osiris/: 1
machines/126.73.181.215/logs/snort/: alert
machines/140.194.214.37/logs/snort/: alert
machines/148.20.231.77/logs/bash_history/: bash_history
machines/148.20.231.77/reports/bash_history/: report_files_edition.txt  report_files_manipulation.txt  report_files_unarchiving.txt  report_local_rebound.txt
machines/153.136.27.106/data/: recap_ip.txt
machines/153.136.27.106/logs/selinux/: audit.log_
machines/153.136.27.106/reports/selinux/: selinux_0.txt  selinux_5.txt
machines/164.99.225.3/reports/mod_security/: asd
machines/192.168.1.10/: machine.conf
machines/241.110.196.120/data/: recap_jour.txt
player/: Makefile  dbus-consts.h  dbus-methods.h  log-player-marshal.h  main.c  server.c  server.h
plugins/bash_history/: plugin.c  plugin.h
plugins/correlation/: alerts_map.c  alerts_map.h  correlation.c  correlation.h  criticality.c  criticality.h  editor.c  editor.h  init_functions.c  init_functions.h  matrix.c  matrix.h  menu_functions.c  menu_functions.h  plugin.c  plugin.h  sequences_map.c  sequences_map.h  text_mode.c  text_mode.h
plugins/correlation/data/: activity_type  bar_day  bar_hour  bar_live  bar_month  bar_week  inter_activity_rules  intra_activity_rules  regex  sequences  value
plugins/mod_security/: plugin.c  plugin.h
plugins/mod_security/data/: asd  asold
plugins/osiris/: plugin.c  plugin.h
plugins/osiris/data/: D0FC.pl  D0FL.pl  D0H.pl  D0MC.pl  D0MS.pl  D1FC.pl  D1FL.pl  D1H.pl  D1MC.pl  D1MS.pl  D2FC.pl  D2FL.pl  D2H.pl  D2MC.pl  D2MS.pl  D3FC.pl  D3FL.pl  D3H.pl  D3MC.pl  D3MS.pl  D4FC.pl  D4FL.pl  D4H.pl  D4MC.pl  D4MS.pl  LMH.pl  LMM.pl  LMU.pl  LP.pl
plugins/p0f/: plugin.c  plugin.h
plugins/p0f/data/: 2daysOSbar.pl  2daysOSlinuxBAR.pl  2daysOSlinuxPIE.pl  2daysOSmacBAR.pl  2daysOSmacPIE.pl  2daysOSpie.pl  2daysOSwindowsBAR.pl  2daysOSwindowsPIE.pl  2daysdistanceBAR.pl  2daysdistancePIE.pl  2daysfwBAR.pl  2daysfwPIE.pl  2dayslinkBAR.pl  2dayslinkPIE.pl  2daysnatBAR.pl  2daysnatPIE.pl  2hoursOSbar.pl  2hoursOSlinuxBAR.pl  2hoursOSlinuxPIE.pl  2hoursOSmacBAR.pl  2hoursOSmacPIE.pl  2hoursOSpie.pl  2hoursOSwindowsBAR.pl  2hoursOSwindowsPIE.pl  2hoursdistanceBAR.pl  2hoursdistancePIE.pl  2hoursfwBAR.pl  2hoursfwPIE.pl  2hourslinkBAR.pl  2hourslinkPIE.pl  2hoursnatBAR.pl  2hoursnatPIE.pl  2monthsOSbar.pl  2monthsOSlinuxBAR.pl  2monthsOSlinuxPIE.pl  2monthsOSmacBAR.pl  2monthsOSmacPIE.pl  2monthsOSpie.pl  2monthsOSwindowsPIE.pl  2monthsdistanceBAR.pl  (+25 more)
plugins/piga/: plugin.c  plugin.h
plugins/selinux/: menu_functions.c  menu_functions.h  plugin.c  plugin.h  selinux.c  selinux.h
plugins/selinux/data/: agg_machines_0  agg_machines_4  agg_machines_5  agg_machines_6  bar_result_0  bar_result_4  bar_result_5  bar_result_6  bar_scontext_r_0  bar_scontext_r_4  bar_scontext_r_5  bar_scontext_r_6  bar_scontext_t_0  bar_scontext_t_4  bar_scontext_t_5  bar_scontext_t_6  bar_scontext_u_0  bar_scontext_u_4  bar_scontext_u_5  bar_scontext_u_6  bar_tclass_0  bar_tclass_4  bar_tclass_5  bar_tclass_6  bar_tcontext_r_0  bar_tcontext_r_4  bar_tcontext_r_5  bar_tcontext_r_6  bar_tcontext_t_0  bar_tcontext_t_4  bar_tcontext_t_5  bar_tcontext_t_6  bar_tcontext_u_0  bar_tcontext_u_4  bar_tcontext_u_5  bar_tcontext_u_6  bar_type_0  bar_type_4  bar_type_5  bar_type_6  (+44 more)
plugins/snort/: file_manip.c  file_manip.h  fonctions.h  plugin.c  plugin.h  position.c  position.h  priority.c  types_of_attacks.c
plugins/snort/data/: Untitled.xcf  data_report  europe  script_monde  script_noun_of_attacks  script_priority
plugins/snort_net/: plugin.c
plugins/syslog_ssh/: plugin.c  plugin.h
plugins/syslog_wget/: plugin.c  plugin.h
plugins/test/: plugin.c  plugin.h
src/: application-data.c  application-data.h  constants.h  data-types.h  frame-actions.c  frame-actions.h  frame-common.h  frame-new-dialog.c  frame-new-dialog.h  frame-open-panel.c  frame-open-panel.h  frame-private.c  frame-private.h  frame-saving.c  frame-saving.h  frame-signals.c  frame-signals.h  frame-table.c  frame-table.h  frame-utilities.c  frame-utilities.h  func-list.c  func-list.h  gedit-spinner.c  gedit-spinner.h  log-player-dbus-marshal.c  log-player-dbus-methods.h  log-player-dbus.c  log-player-dbus.h  log-player.c  log-player.h  machine.c  machine.h  main.c  notebook.c  notebook.h  plugins.c  plugins.h  settings-manager.c  settings-manager.h  (+6 more)
(+194 files in other folders)
